syntax = "proto3";

service RaftRPC {
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply) {}

    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply) {}
}

message Entry {
    int32 Term = 1;
    string Data = 2;
}

message AppendEntriesArgs {
    int32 Term = 1;
    int32 LeaderID = 2;
    int32 PrevLogIndex = 3;
    int32 PrevLogTerm = 4;
    int32 LeaderCommit = 5;
    repeated Entry Entries = 6;
}

message AppendEntriesReply {
    int32 Term = 1;
    bool Success = 2;
    bool Conflict = 3;
    int32 StartFrom = 4;
}

message RequestVoteArgs {
    int32 Term = 1;
    int32 CandidatedID = 2;
    int32 LastLogIndex = 3;
    int32 LastLogTerm = 4;
}

message RequestVoteReply {
    int32 Term = 1;
    bool VoteGranted = 2;
}